--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #18f18c; }
+  background: #b0780c; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #a8f2c2; }
+  background: #247a62; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #3f72c6; }
+  background: #6d6bf7; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #a49b93; }
+  background: #893da1; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #1dda23; }
+  background: #b68ae2; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #f36c02; }
+  background: #df9ac4; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #607053; }
+  background: #0f2ee0; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #063148; }
+  background: #988639; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #860b2e; }
+  background: #e589cb; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #622e2c; }
+  background: #38676b; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #7f26d0; }
+  background: #f3ee60; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #5fbb08; }
+  background: #ec95e1; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #2b7660; }
+  background: #91db6b; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #d89a1c; }
+  background: #e273ce; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #039a21; }
+  background: #424c62; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #9fd65c; }
+  background: #952e0e; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #3125d6; }
+  background: #a1eaa0; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #64c31f; }
+  background: #3496ca; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #cd16f0; }
+  background: #88b1eb; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #9ed010; }
+  background: #67cc6a; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #e879f6; }
+  background: #386a33; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #c1e9a6; }
+  background: #30dd7c; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #325836; }
+  background: #470782; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #baf2cb; }
+  background: #c7ed2f; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #f2e49b; }
+  background: #a01085; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #865f5f; }
+  background: #ba8113; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #7f412b; }
+  background: #0764e1; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #d6a137; }
+  background: #7e966f; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #464310; }
+  background: #b7605f; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #78d7b6; }
+  background: #16d167; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #5146e8; }
+  background: #849ea8; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #70f5b6; }
+  background: #fd89a3; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #2748f8; }
+  background: #a2b399; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #b9f358; }
+  background: #0633bb; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #f914db; }
+  background: #7547f3; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #17597d; }
+  background: #4dff8c; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #756439; }
+  background: #0cfe2b; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #e0a163; }
+  background: #60dbef; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #543046; }
+  background: #8b911d; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #924466; }
+  background: #1e827d; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #c22704; }
+  background: #b92675; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #ce02c1; }
+  background: #05cea6; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #0f607f; }
+  background: #a39713; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #5610e0; }
+  background: #dbbcd4; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #e33a51; }
+  background: #462584; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #706a44; }
+  background: #146432; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #9652b1; }
+  background: #ab36e4; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #6bb438; }
+  background: #102c41; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #aca344; }
+  background: #dc6e3b; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #b4b9ed; }
+  background: #152b33; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #4a2f8a; }
+  background: #e7d74d; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #f74235; }
+  background: #6e9520; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #345a6b; }
+  background: #59720f; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #8cccc1; }
+  background: #8a2f59; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #1c55bc; }
+  background: #dad1f8; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #1f121b; }
+  background: #a36ba7; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #ba7d75; }
+  background: #1cce6e; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #3b3a9f; }
+  background: #92fe7b; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #f70d8b; }
+  background: #de1472; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #dae55f; }
+  background: #4a122d; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #75179c; }
+  background: #03bc8b; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #a01f6d; }
+  background: #b17ead; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #8c7895; }
+  background: #565737; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #ee4113; }
+  background: #5c859c; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #de07be; }
+  background: #54c8a4; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #eb30e2; }
+  background: #41900f; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #5d8b26; }
+  background: #2c9363; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #38c0fe; }
+  background: #a9aeb4; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #94b081; }
+  background: #854648; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #2aec66; }
+  background: #2ec52a; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #722fdc; }
+  background: #e041d4; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #dbf808; }
+  background: #c44566; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #e59d1b; }
+  background: #cbdb79; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #2b9e21; }
+  background: #40dfc7; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #d9335c; }
+  background: #da9fa1; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #560282; }
+  background: #8a2d1b; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #a2f815; }
+  background: #adf049; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #199512; }
+  background: #77aa13; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #155ee1; }
+  background: #0c388a; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #9acefc; }
+  background: #6d02cd; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #7d8e51; }
+  background: #3c3569; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #8b228f; }
+  background: #6fa86f; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #9efdc6; }
+  background: #b27cfb; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #c87a7a; }
+  background: #c1296a; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #8c4d4d; }
+  background: #7d4a16; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #678d07; }
+  background: #62dec6; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #780b09; }
+  background: #016ea1; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #1869bc; }
+  background: #7c66b2; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #7a3627; }
+  background: #f838ff; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #2258fd; }
+  background: #4daefc; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #a0be51; }
+  background: #f76a04; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #6869c0; }
+  background: #719bcf; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #bcae3f; }
+  background: #97388b; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #715cc7; }
+  background: #19e1ff; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #1c4b2d; }
+  background: #7c0699; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #db6950; }
+  background: #5b3ce9; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #f90eba; }
+  background: #c5c2e4; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #eab45d; }
+  background: #f0f181; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #14a938; }
+  background: #f626d3; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #a037e2; }
+  background: #933aa6; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14898,12 +14898,12 @@ option {
   padding: 30px; }
   .lets-get-started-modal-wrapper .lets-get-modal-header {
     text-align: center;
-    font-size: 26px;
+    font-size: 28px;
     font-weight: 600;
     position: relative; }
     .lets-get-started-modal-wrapper .lets-get-modal-header p {
       color: #4C4C4C;
-      font-size: 13px;
+      font-size: 16px;
       font-weight: normal;
       margin-top: 12px; }
     .lets-get-started-modal-wrapper .lets-get-modal-header .lets-get-close {
@@ -14918,13 +14918,13 @@ option {
 
 .tow-boxs-div {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   grid-gap: 30px;
   margin-top: 40px; }
   .tow-boxs-div .box-div {
     text-align: center;
     border: 1px solid #CACACA;
-    padding: 12px;
+    padding: 12px 12px 22px;
     font-size: 14px;
     color: #4C4C4C; }
     .tow-boxs-div .box-div .box-img {
