--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -3487,12 +3487,12 @@ option {
   padding: 30px;
   .lets-get-modal-header {
     text-align: center;
-    font-size: 26px;
+    font-size: 28px;
     font-weight: 600;
     position: relative;
     p {
       color: #4C4C4C;
-      font-size: 13px;
+      font-size: 16px;
 font-weight: normal;
 margin-top: 12px;
     }
@@ -3511,14 +3511,14 @@ margin-top: 12px;
 }
 .tow-boxs-div {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   grid-gap: 30px;
   margin-top: 40px;
  
   .box-div {
     text-align: center;
     border: 1px solid #CACACA;
-    padding: 12px;
+    padding: 12px 12px 22px;
     font-size: 14px;
     color: #4C4C4C;
     .box-img {
