--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -3522,7 +3522,10 @@ margin-top: 12px;
     font-size: 14px;
     color: #4C4C4C;
     .box-img {
-      margin-bottom: 20px;
+      margin: 35px 0px;
+    }
+    button {
+      margin-top: 25px;
     }
   }
 }
