--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #b0780c; }
+  background: #f32dac; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #247a62; }
+  background: #98125c; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #6d6bf7; }
+  background: #f478ba; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #893da1; }
+  background: #39f2c1; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #b68ae2; }
+  background: #73786b; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #df9ac4; }
+  background: #568666; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #0f2ee0; }
+  background: #ad49a5; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #988639; }
+  background: #ae1c26; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #e589cb; }
+  background: #78a02b; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #38676b; }
+  background: #266732; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #f3ee60; }
+  background: #516fb7; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #ec95e1; }
+  background: #c36a03; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #91db6b; }
+  background: #99690c; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #e273ce; }
+  background: #883d96; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #424c62; }
+  background: #639985; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #952e0e; }
+  background: #8d2672; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #a1eaa0; }
+  background: #d2c0cf; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #3496ca; }
+  background: #1c3f84; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #88b1eb; }
+  background: #be1bcf; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #67cc6a; }
+  background: #ded2a8; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #386a33; }
+  background: #5978b5; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #30dd7c; }
+  background: #eedee0; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #470782; }
+  background: #f9e70b; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #c7ed2f; }
+  background: #057b76; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #a01085; }
+  background: #41f169; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #ba8113; }
+  background: #60f61a; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #0764e1; }
+  background: #d4dab1; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #7e966f; }
+  background: #72e1d8; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #b7605f; }
+  background: #754c7a; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #16d167; }
+  background: #a6d303; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #849ea8; }
+  background: #67283a; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #fd89a3; }
+  background: #f8682b; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #a2b399; }
+  background: #8b5446; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #0633bb; }
+  background: #2b6773; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #7547f3; }
+  background: #ab4eeb; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #4dff8c; }
+  background: #1bae60; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #0cfe2b; }
+  background: #7d6508; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #60dbef; }
+  background: #920845; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #8b911d; }
+  background: #b5a942; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #1e827d; }
+  background: #b73d0d; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #b92675; }
+  background: #e2fd29; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #05cea6; }
+  background: #771725; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #a39713; }
+  background: #a79abb; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #dbbcd4; }
+  background: #19d2d8; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #462584; }
+  background: #82b986; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #146432; }
+  background: #c7b6a4; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #ab36e4; }
+  background: #a6122a; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #102c41; }
+  background: #9715ea; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #dc6e3b; }
+  background: #7ea121; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #152b33; }
+  background: #cbf6c6; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #e7d74d; }
+  background: #319e7d; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #6e9520; }
+  background: #b5f3e7; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #59720f; }
+  background: #ee36be; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #8a2f59; }
+  background: #2a5394; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #dad1f8; }
+  background: #da355d; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #a36ba7; }
+  background: #67fbbb; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #1cce6e; }
+  background: #7699fa; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #92fe7b; }
+  background: #d0f01e; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #de1472; }
+  background: #c97e47; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #4a122d; }
+  background: #d899c9; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #03bc8b; }
+  background: #cde48e; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #b17ead; }
+  background: #882adf; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #565737; }
+  background: #326b23; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #5c859c; }
+  background: #5b2fd5; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #54c8a4; }
+  background: #ec14ff; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #41900f; }
+  background: #d7cc1c; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #2c9363; }
+  background: #47f3b9; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #a9aeb4; }
+  background: #dacbed; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #854648; }
+  background: #8c43a2; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #2ec52a; }
+  background: #c1e4cd; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #e041d4; }
+  background: #db88d7; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #c44566; }
+  background: #9d686b; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #cbdb79; }
+  background: #603a8a; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #40dfc7; }
+  background: #8b092e; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #da9fa1; }
+  background: #a440f6; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #8a2d1b; }
+  background: #acabac; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #adf049; }
+  background: #92ae73; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #77aa13; }
+  background: #e31cf5; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #0c388a; }
+  background: #41754d; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #6d02cd; }
+  background: #29ccd8; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #3c3569; }
+  background: #8735e9; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #6fa86f; }
+  background: #3429c6; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #b27cfb; }
+  background: #cfca55; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #c1296a; }
+  background: #a96f94; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #7d4a16; }
+  background: #39c24c; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #62dec6; }
+  background: #b49fe6; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #016ea1; }
+  background: #b019d4; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #7c66b2; }
+  background: #1ec3e2; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #f838ff; }
+  background: #27f893; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #4daefc; }
+  background: #a4ebdb; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #f76a04; }
+  background: #4f552c; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #719bcf; }
+  background: #34a6d2; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #97388b; }
+  background: #223dbf; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #19e1ff; }
+  background: #250ef3; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #7c0699; }
+  background: #878841; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #5b3ce9; }
+  background: #104709; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #c5c2e4; }
+  background: #5573f5; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #f0f181; }
+  background: #6b818f; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #f626d3; }
+  background: #b0ac87; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #933aa6; }
+  background: #64510c; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14928,7 +14928,9 @@ option {
     font-size: 14px;
     color: #4C4C4C; }
     .tow-boxs-div .box-div .box-img {
-      margin-bottom: 20px; }
+      margin: 35px 0px; }
+    .tow-boxs-div .box-div button {
+      margin-top: 25px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
