--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #f32dac; }
+  background: #2e7820; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #98125c; }
+  background: #e54450; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #f478ba; }
+  background: #b3a630; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #39f2c1; }
+  background: #ead363; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #73786b; }
+  background: #558a67; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #568666; }
+  background: #e11dc8; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #ad49a5; }
+  background: #e974ee; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #ae1c26; }
+  background: #615759; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #78a02b; }
+  background: #3f57b7; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #266732; }
+  background: #fa8a40; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #516fb7; }
+  background: #089a54; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #c36a03; }
+  background: #e1bc05; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #99690c; }
+  background: #c7dc38; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #883d96; }
+  background: #89e7c4; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #639985; }
+  background: #3c743e; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #8d2672; }
+  background: #e33985; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #d2c0cf; }
+  background: #e2d999; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #1c3f84; }
+  background: #79edf7; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #be1bcf; }
+  background: #dd48f6; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #ded2a8; }
+  background: #575232; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #5978b5; }
+  background: #57b441; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #eedee0; }
+  background: #f8d226; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #f9e70b; }
+  background: #f00831; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #057b76; }
+  background: #bbb4f5; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #41f169; }
+  background: #0e9ec8; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #60f61a; }
+  background: #9315c0; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #d4dab1; }
+  background: #ea6c1d; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #72e1d8; }
+  background: #5ac5b9; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #754c7a; }
+  background: #c525f1; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #a6d303; }
+  background: #7dfff6; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #67283a; }
+  background: #9f31fa; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #f8682b; }
+  background: #9ad2c9; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #8b5446; }
+  background: #412574; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #2b6773; }
+  background: #9e1a40; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #ab4eeb; }
+  background: #1b442f; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #1bae60; }
+  background: #2505d2; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #7d6508; }
+  background: #7cdc63; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #920845; }
+  background: #32cc2d; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #b5a942; }
+  background: #1e3fad; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #b73d0d; }
+  background: #c1c866; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #e2fd29; }
+  background: #ec2dab; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #771725; }
+  background: #8f2b45; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #a79abb; }
+  background: #6618f4; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #19d2d8; }
+  background: #a2b701; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #82b986; }
+  background: #60bd45; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #c7b6a4; }
+  background: #8dd0d5; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #a6122a; }
+  background: #aec19d; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #9715ea; }
+  background: #ce1b9b; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #7ea121; }
+  background: #064c94; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #cbf6c6; }
+  background: #1ac801; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #319e7d; }
+  background: #438ea5; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #b5f3e7; }
+  background: #999f70; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #ee36be; }
+  background: #eb71d8; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #2a5394; }
+  background: #3cb943; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #da355d; }
+  background: #b90eee; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #67fbbb; }
+  background: #4867c2; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #7699fa; }
+  background: #afe3bf; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #d0f01e; }
+  background: #799123; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #c97e47; }
+  background: #68ed35; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #d899c9; }
+  background: #0c6560; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #cde48e; }
+  background: #064538; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #882adf; }
+  background: #0c4208; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #326b23; }
+  background: #cb20e2; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #5b2fd5; }
+  background: #9f0b40; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #ec14ff; }
+  background: #ff916a; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #d7cc1c; }
+  background: #74c062; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #47f3b9; }
+  background: #ed5b2f; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #dacbed; }
+  background: #5d1068; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #8c43a2; }
+  background: #610f27; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #c1e4cd; }
+  background: #9b0b47; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #db88d7; }
+  background: #1ac85e; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #9d686b; }
+  background: #5a171e; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #603a8a; }
+  background: #c14e3f; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #8b092e; }
+  background: #888db6; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #a440f6; }
+  background: #cc17ee; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #acabac; }
+  background: #465fc5; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #92ae73; }
+  background: #9e62c3; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #e31cf5; }
+  background: #f7943c; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #41754d; }
+  background: #f0b4cb; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #29ccd8; }
+  background: #59029f; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #8735e9; }
+  background: #6bb65c; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #3429c6; }
+  background: #0687a5; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #cfca55; }
+  background: #396d4e; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #a96f94; }
+  background: #2523f4; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #39c24c; }
+  background: #b413fd; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #b49fe6; }
+  background: #b6fd59; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #b019d4; }
+  background: #c9af04; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #1ec3e2; }
+  background: #afe469; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #27f893; }
+  background: #d5e9ff; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #a4ebdb; }
+  background: #8e17ad; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #4f552c; }
+  background: #273547; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #34a6d2; }
+  background: #81db45; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #223dbf; }
+  background: #0a8c6f; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #250ef3; }
+  background: #6b103a; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #878841; }
+  background: #f3e5de; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #104709; }
+  background: #65f7e1; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #5573f5; }
+  background: #153dc3; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #6b818f; }
+  background: #82563b; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #b0ac87; }
+  background: #883afd; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #64510c; }
+  background: #37f5ad; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14931,6 +14931,13 @@ option {
       margin: 35px 0px; }
     .tow-boxs-div .box-div button {
       margin-top: 25px; }
+
+.lets-get-modal-content-box h6 {
+  text-align: center;
+  margin: 26px auto;
+  font-size: 16px;
+  font-weight: 600;
+  color: #4c4c4c; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
