--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -3529,3 +3529,12 @@ margin-top: 12px;
     }
   }
 }
+.lets-get-modal-content-box {
+  h6 {
+    text-align: center;
+margin: 26px auto;
+font-size: 16px;
+font-weight: 600;
+color: #4c4c4c;
+  }
+}
