--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #2e7820; }
+  background: #42c163; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #e54450; }
+  background: #ab286e; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #b3a630; }
+  background: #1cfc57; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #ead363; }
+  background: #6f1939; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #558a67; }
+  background: #f73dec; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #e11dc8; }
+  background: #622ae8; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #e974ee; }
+  background: #f94a99; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #615759; }
+  background: #f10b7a; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #3f57b7; }
+  background: #a49196; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #fa8a40; }
+  background: #f9ea0f; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #089a54; }
+  background: #a101c7; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #e1bc05; }
+  background: #bfbd43; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #c7dc38; }
+  background: #c0c3e5; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #89e7c4; }
+  background: #6d4a39; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #3c743e; }
+  background: #e91c98; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #e33985; }
+  background: #c7740f; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #e2d999; }
+  background: #5a0972; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #79edf7; }
+  background: #30ed6b; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #dd48f6; }
+  background: #bedae9; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #575232; }
+  background: #cfed80; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #57b441; }
+  background: #8caba1; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #f8d226; }
+  background: #8039bc; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #f00831; }
+  background: #507741; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #bbb4f5; }
+  background: #6eecaa; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #0e9ec8; }
+  background: #476004; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #9315c0; }
+  background: #992f24; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #ea6c1d; }
+  background: #561231; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #5ac5b9; }
+  background: #74dba2; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #c525f1; }
+  background: #1078a4; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #7dfff6; }
+  background: #a171a3; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #9f31fa; }
+  background: #5b4143; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #9ad2c9; }
+  background: #186c39; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #412574; }
+  background: #e7be52; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #9e1a40; }
+  background: #9d2e28; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #1b442f; }
+  background: #badb34; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #2505d2; }
+  background: #74322b; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #7cdc63; }
+  background: #2134ee; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #32cc2d; }
+  background: #31f7d7; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #1e3fad; }
+  background: #9135fb; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #c1c866; }
+  background: #0ccc13; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #ec2dab; }
+  background: #280873; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #8f2b45; }
+  background: #c6dce1; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #6618f4; }
+  background: #6f564a; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #a2b701; }
+  background: #7d7ef8; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #60bd45; }
+  background: #b0a573; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #8dd0d5; }
+  background: #a1a078; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #aec19d; }
+  background: #993a73; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #ce1b9b; }
+  background: #be7960; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #064c94; }
+  background: #a76c2b; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #1ac801; }
+  background: #eb23d6; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #438ea5; }
+  background: #55a1c2; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #999f70; }
+  background: #7cb75c; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #eb71d8; }
+  background: #ab6120; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #3cb943; }
+  background: #c8c1b8; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #b90eee; }
+  background: #421e6b; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #4867c2; }
+  background: #c77fdc; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #afe3bf; }
+  background: #a53103; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #799123; }
+  background: #7cc4eb; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #68ed35; }
+  background: #cef61d; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #0c6560; }
+  background: #89963e; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #064538; }
+  background: #3ec886; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #0c4208; }
+  background: #eaf2a8; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #cb20e2; }
+  background: #dc1a50; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #9f0b40; }
+  background: #1c1791; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #ff916a; }
+  background: #b1d76a; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #74c062; }
+  background: #fef745; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #ed5b2f; }
+  background: #3cf1ce; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #5d1068; }
+  background: #47b80d; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #610f27; }
+  background: #6a4e3b; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #9b0b47; }
+  background: #c69ad0; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #1ac85e; }
+  background: #e4efa7; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #5a171e; }
+  background: #0bd2a2; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #c14e3f; }
+  background: #a72730; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #888db6; }
+  background: #3db5dd; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #cc17ee; }
+  background: #c1d8b9; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #465fc5; }
+  background: #3c4ae0; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #9e62c3; }
+  background: #70d090; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #f7943c; }
+  background: #31d7f6; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #f0b4cb; }
+  background: #acc59d; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #59029f; }
+  background: #444279; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #6bb65c; }
+  background: #1fcd86; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #0687a5; }
+  background: #12387c; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #396d4e; }
+  background: #a0e465; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #2523f4; }
+  background: #727829; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #b413fd; }
+  background: #a73425; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #b6fd59; }
+  background: #323781; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #c9af04; }
+  background: #d1d096; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #afe469; }
+  background: #b8dd0b; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #d5e9ff; }
+  background: #ada195; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #8e17ad; }
+  background: #66aab0; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #273547; }
+  background: #a4bbdb; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #81db45; }
+  background: #36aee0; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #0a8c6f; }
+  background: #7ae6d6; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #6b103a; }
+  background: #ec78c2; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #f3e5de; }
+  background: #4ce2e4; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #65f7e1; }
+  background: #efebae; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #153dc3; }
+  background: #6c61c0; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #82563b; }
+  background: #93512d; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #883afd; }
+  background: #a68313; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #37f5ad; }
+  background: #e21770; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -15292,7 +15292,13 @@ option {
     flex-direction: column; }
     .default-password-modal-bottom-row .default-pass-btn-div {
       margin-top: 15px;
-      width: 100%; } }
+      width: 100%; }
+
+  .lets-get-started-modal-wrapper .lets-get-modal-header .lets-get-close {
+    right: -48px; }
+
+  .tow-boxs-div {
+    grid-template-columns: repeat(auto-fit, minmax(265px, 1fr)); } }
 /*767 screen end here*/
 /*768 to 1023 screen css*/
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
