--- a/scss/_fahad-responsive.scss
+++ b/scss/_fahad-responsive.scss
@@ -559,6 +559,16 @@
             width: 100%;
         }
     }
+    .lets-get-started-modal-wrapper {
+        .lets-get-modal-header {
+            .lets-get-close {
+                right: -48px;
+            }
+        }
+    }
+    .tow-boxs-div {
+        grid-template-columns: repeat(auto-fit, minmax(265px, 1fr));  
+    }
 
 }
 
