--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #42c163; }
+  background: #7ba28b; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #ab286e; }
+  background: #19af89; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #1cfc57; }
+  background: #9b2a76; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #6f1939; }
+  background: #8cbcd3; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #f73dec; }
+  background: #bd1deb; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #622ae8; }
+  background: #f5c31d; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #f94a99; }
+  background: #58c4f1; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #f10b7a; }
+  background: #28c9ca; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #a49196; }
+  background: #4252b7; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #f9ea0f; }
+  background: #1c0a53; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #a101c7; }
+  background: #9b8f3b; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #bfbd43; }
+  background: #a98e10; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #c0c3e5; }
+  background: #7687ec; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #6d4a39; }
+  background: #ffbc28; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #e91c98; }
+  background: #1c86fc; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #c7740f; }
+  background: #3180d2; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #5a0972; }
+  background: #a46f7c; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #30ed6b; }
+  background: #884f63; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #bedae9; }
+  background: #aba750; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #cfed80; }
+  background: #972c6b; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #8caba1; }
+  background: #af55ae; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #8039bc; }
+  background: #e1c428; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #507741; }
+  background: #a41d91; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #6eecaa; }
+  background: #fcfcd2; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #476004; }
+  background: #4a88ba; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #992f24; }
+  background: #e8038e; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #561231; }
+  background: #f55ae4; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #74dba2; }
+  background: #afdee7; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #1078a4; }
+  background: #343ddf; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #a171a3; }
+  background: #3f1739; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #5b4143; }
+  background: #7503b7; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #186c39; }
+  background: #4aadf2; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #e7be52; }
+  background: #0ea8d4; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #9d2e28; }
+  background: #8d0c0d; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #badb34; }
+  background: #780994; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #74322b; }
+  background: #25a52d; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #2134ee; }
+  background: #e4d474; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #31f7d7; }
+  background: #f0f513; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #9135fb; }
+  background: #2e3a62; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #0ccc13; }
+  background: #899b70; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #280873; }
+  background: #d3caa7; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #c6dce1; }
+  background: #45948d; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #6f564a; }
+  background: #b45b4b; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #7d7ef8; }
+  background: #fa53b5; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #b0a573; }
+  background: #ef73fb; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #a1a078; }
+  background: #1062a6; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #993a73; }
+  background: #022703; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #be7960; }
+  background: #39f74d; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #a76c2b; }
+  background: #1ff316; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #eb23d6; }
+  background: #751027; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #55a1c2; }
+  background: #49b0ec; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #7cb75c; }
+  background: #b1e17c; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #ab6120; }
+  background: #193d35; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #c8c1b8; }
+  background: #3dd0dc; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #421e6b; }
+  background: #28d5c7; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #c77fdc; }
+  background: #78a18e; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #a53103; }
+  background: #45d426; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #7cc4eb; }
+  background: #5c1bca; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #cef61d; }
+  background: #7079f2; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #89963e; }
+  background: #ab9091; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #3ec886; }
+  background: #60073b; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #eaf2a8; }
+  background: #7cc52a; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #dc1a50; }
+  background: #284a6e; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #1c1791; }
+  background: #d847df; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #b1d76a; }
+  background: #fe3d23; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #fef745; }
+  background: #4e3e0a; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #3cf1ce; }
+  background: #472e02; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #47b80d; }
+  background: #f74baa; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #6a4e3b; }
+  background: #60c925; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #c69ad0; }
+  background: #57b420; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #e4efa7; }
+  background: #495ee7; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #0bd2a2; }
+  background: #6a2b65; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #a72730; }
+  background: #6f4425; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #3db5dd; }
+  background: #17e4b7; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #c1d8b9; }
+  background: #875e85; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #3c4ae0; }
+  background: #39572f; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #70d090; }
+  background: #53e41e; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #31d7f6; }
+  background: #b6ea35; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #acc59d; }
+  background: #7bdbbd; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #444279; }
+  background: #57974e; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #1fcd86; }
+  background: #311af1; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #12387c; }
+  background: #bd569b; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #a0e465; }
+  background: #b59855; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #727829; }
+  background: #40c17b; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #a73425; }
+  background: #39d1ac; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #323781; }
+  background: #5b47bf; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #d1d096; }
+  background: #79a28c; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #b8dd0b; }
+  background: #4f030c; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #ada195; }
+  background: #69c8a8; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #66aab0; }
+  background: #b87fce; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #a4bbdb; }
+  background: #140671; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #36aee0; }
+  background: #9713bf; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #7ae6d6; }
+  background: #9743a2; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #ec78c2; }
+  background: #753927; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #4ce2e4; }
+  background: #80c03a; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #efebae; }
+  background: #b911bd; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #6c61c0; }
+  background: #b4f57a; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #93512d; }
+  background: #85ab6b; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #a68313; }
+  background: #024382; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #e21770; }
+  background: #b63e94; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -15298,7 +15298,9 @@ option {
     right: -48px; }
 
   .tow-boxs-div {
-    grid-template-columns: repeat(auto-fit, minmax(265px, 1fr)); } }
+    grid-template-columns: repeat(auto-fit, minmax(265px, 1fr)); }
+    .tow-boxs-div .box-div .box-img img {
+      width: 210px; } }
 /*767 screen end here*/
 /*768 to 1023 screen css*/
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
@@ -15322,6 +15324,11 @@ option {
       .list-view-hover-wrapper .content-wrapper .view-boxs-wrapper .view-box {
         max-width: 100%; } }
 @media only screen and (min-width: 320px) and (max-width: 1023px) {
+  .tow-boxs-div {
+    grid-template-columns: repeat(auto-fit, minmax(205px, 1fr)); }
+    .tow-boxs-div .box-div .box-img img {
+      width: 180px; }
+
   .query-wizard-exp-contents {
     overflow-x: auto; }
     .query-wizard-exp-contents .query-wizard-expension {
