--- a/scss/_fahad-responsive.scss
+++ b/scss/_fahad-responsive.scss
@@ -568,6 +568,13 @@
     }
     .tow-boxs-div {
         grid-template-columns: repeat(auto-fit, minmax(265px, 1fr));  
+        .box-div {
+            .box-img {
+                img {
+                    width: 210px;
+                }
+            }
+        }
     }
 
 }
@@ -588,6 +595,8 @@
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
+
+
     .modal-add-connections-wrapper {
         .choose-file-modal {
             margin-left: 15px;
@@ -615,6 +624,18 @@
 }
 
 @media only screen and (min-width: 320px) and (max-width: 1023px) {
+
+    .tow-boxs-div {
+        grid-template-columns: repeat(auto-fit, minmax(205px, 1fr));  
+        .box-div {
+            .box-img {
+                img {
+                    width: 180px;
+                }
+            }
+        }
+    }
+    
     .query-wizard-exp-contents {
         overflow-x: auto;
 
